--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3",
-    "Router": "^2.1.0"
+    "mongoose": "^8.1.1",
+    "nodemon": "^3.0.3"
   }
 }
