--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
