--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.4.1",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
