worked on admin panel

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3001
 
-# NODE_ENV=production
-NODE_ENV=development
+NODE_ENV=production
+# NODE_ENV=development
 
 MONGO_URL=mongodb+srv://imolympiad:abc1234@imolympiad.0dthdby.mongodb.net/imolympiadDB
 # MONGO_URL=mongodb://127.0.0.1:27017/
