--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mailersend": "^2.2.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
